--- a/odoo/addons/base/views/ir_sequence_views.xml
+++ b/odoo/addons/base/views/ir_sequence_views.xml
@@ -60,8 +60,8 @@
                         </group>
                         <group attrs="{'invisible': [('use_date_range', '=', False)]}">
                             <div>
-                                When subsequences per date range are used, you can prefix variables with 'range_'
-                                to use the beginning of the range instead of the current date, e.g. %%(range_year)s instead of %%(year)s.
+                                When subsequences per date range are used, you can prefix variables with 'range_from_' or 'range_to_'
+                                to use the begin or the end date of the range instead of the current date, e.g. %%(range_year)s instead of %%(year)s.
                             </div>
                         </group>
                     </page>
